Set width to avoid line break in the navigation.

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -56,6 +56,8 @@ html, body
       list-style-type:     disc
       list-style-position: inside
       margin:              0 0 12px 0
+      &> li
+        width: 230px
 
     &.selected
       > a
